@@ -12,26 +12,11 @@
  * See the file "license.terms" for information on usage and redistribution
  * of this file, and for a DISCLAIMER OF ALL WARRANTIES.
  *
- * RCS: @(#) $Id: tkMacOSXPort.h,v 1.14 2008/08/19 15:52:13 georgeps Exp $
+ * RCS: @(#) $Id: tkMacOSXPort.h,v 1.15 2008/12/17 22:51:25 nijtmans Exp $
  */
 
 #ifndef _TKMACPORT
 #define _TKMACPORT
-
-/*
- * Macro to use instead of "void" for arguments that must have
- * type "void *" in ANSI C; maps them to type "char *" in
- * non-ANSI systems. This macro may be used in some of the include
- * files below, which is why it is defined here.
- */
-
-#ifndef VOID
-#   ifdef __STDC__
-#	define VOID void
-#   else
-#	define VOID char
-#   endif
-#endif
 
 #include <stdio.h>
 #include <ctype.h>
