@@ -1,3 +1,9 @@
+2008-12-17  Jan Nijtmans  <nijtmans@users.sf.net>
+
+	* generic/tk.h:           VOID --> void
+	* unix/tkUnixPort.h:
+	* macosx/tkMacOSXPort.h:
+
 2008-12-17  Donal K. Fellows  <dkf@users.sf.net>
 
 	* doc/selection.n: Assorted small fixes. [Bugs 2441817,2441884]
